--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "adeel_bhai_website",
+  "name": "visioncraft-eyewear-js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "set HTTPS=true && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "@heroicons/react": "^2.0.18",
+    "aframe": "^1.4.2",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.556.0",
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.10.1",
+    "sharp": "^0.32.6",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4",
-    "tailwindcss": "^4"
+    "@next/bundle-analyzer": "^16.0.8",
+    "@types/node": "20.10.0",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.54.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "8.4.30",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.3.2"
   }
 }
