--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.15",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.1.6",
     "postcss": "8.4.30",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.1",
